[package]
name = "ucode"
version = "0.0.0"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
edition = "2021"
description = "Language Server"
repository = "https://github.com/daxartio/ucode"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
lsp-server = "0.7.5"
lsp-types = "0.97.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]

[[bin]]
path = "src/main.rs"
name = "ucode-cli"

